[tool.poetry]
name = "find-feature-frames"
version = "0.1.0"
description = ""
authors = ["Ricklon <rick.rickanderson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.37.1"
opencv-python-headless = "^4.10.0.84"
plotly = "^5.23.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
